day03/cs-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cs-ns
  labels:
    app: cs
