day03/cs-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cs-svc
  namespace: cs-ns
  labels:
    app: cs
spec:
  type: ClusterIP
  selector: 
    name: cs-po
    app: cs
  ports:
  - name: cs-port
    port: 8443
    targetPort: 8443
