day03/cs-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs-ing
  namespace: cs-ns
  labels:
    name: cs-ing
    app: cs
spec:
  ingressClassName: nginx
  rules: 
  - host: cs-188.166.199.92.nip.io #dov.mydomain.com (point port to this domain address)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cs-svc
            port:
              name: cs-port
